# mlir_test

./: .gitignore  README.md  diff_webgpu.txt  package.json  pyproject.toml
,/p/: project.json
,/p/functions/: add1.json  main.json
backend/: __init__.py  main.py
backend/api/: build.py  constraint_utils.py  dialects.py  execution.py  functions.py  graph.py  projects.py  test_dialects.py  test_projects.py  types.py
backend/mlir_utils/: cli.py  generator.py  lowering.py  paths.py
backend/services/: attribute_converter.py  enum_registry.py  graph_builder.py  op_registry.py  project_builder.py  test_graph_builder.py  test_project_builder.py  type_registry.py
frontend/: ARCHITECTURE.md  index.html  package-lock.json  package.json  style-dictionary.config.js  vite.config.ts  vite.config.vscode.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/app/: EditorApp.tsx  MainLayout.tsx  PropertiesApp.tsx  index.ts
frontend/src/components/: AttributeEditor.tsx  BlueprintNode.tsx  CodeView.tsx  ConstraintNode.tsx  CustomEdge.tsx  EditorControlBar.tsx  ExecutionPanel.tsx  ExecutionPin.tsx  FunctionCallNode.tsx  FunctionEntryNode.tsx  FunctionManager.tsx  FunctionReturnNode.tsx  FunctionTraitsEditor.tsx  LeftPanelTabs.tsx  MainLayout.tsx  NodePalette.tsx  NodePins.tsx  PerformanceOverlay.tsx  (+7 more)
mlir_utils/: __init__.py  cli.py  generator.py  lowering.py  paths.py  tblgen.py
p/: add1.mlir.json  add2.mlir.json  main.mlir.json  project.json
p/functions/: add1.json  add2.json  main.json
scripts/: dev.ts  port-utils.ts
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
(+297 files in other folders)
