[project]
name = "mlir-test"
version = "0.1.0"
description = "MLIR Blueprint Editor - Visual node-based MLIR programming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlir",
    "mlir-native-tools",
    "mlir-python-bindings",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "hypothesis>=6.100.0",
]

[tool.uv]
find-links = ["https://github.com/makslevental/mlir-wheels/releases/expanded_assets/latest"]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
